[gd_scene load_steps=5 format=3 uid="uid://ymppe0fju62a"]

[ext_resource type="Script" uid="uid://ctvvqfohxcmda" path="res://Will/grunt.gd" id="1_dsrx1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oejt3"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cr0by"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vqibj"]

[node name="Grunt" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_dsrx1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oejt3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(20, 21)
texture = SubResource("PlaceholderTexture2D_cr0by")

[node name="ClickArea" type="Area2D" parent="."]

[node name="ClickCollision" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("CircleShape2D_vqibj")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 40.0
navigation_layers = 2
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 6
debug_enabled = true
debug_path_custom_line_width = 1.0

[node name="NavTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input_event"]
[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
